# ccdirenv

./: Cargo.toml  LICENSE-MIT  README.ja.md  README.md  flake.nix
.github/workflows/: ci.yml  homebrew-publish.yml
docs/: design.md  plan.md
src/: config.rs  env.rs  lib.rs  main.rs  paths.rs
src/manager/: cli.rs  mod.rs
src/manager/cmd/: config_cmd.rs  doctor.rs  ensure_ghq.rs  ghq.rs  git.rs  import.rs  init.rs  list.rs  login.rs  mod.rs  mode.rs  owners.rs  unuse.rs  use_cmd.rs  which.rs
src/profile/: ghq.rs  git.rs  mod.rs  resolve.rs
src/shim/: fast_path.rs  mod.rs  real.rs  replace.rs
tests/: manager_integration.rs  shim_integration.rs
tests/fixtures/: fake_claude.sh
